k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 5000       # Port du service
      targetPort: 5000 # Port du conteneur
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
        - name: backend-api
          # REMPLACEZ par le nom de votre image backend
          image: nebag/alomra-project-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
